--- a/css/about.css
+++ b/css/about.css
@@ -2,6 +2,7 @@
 * {
   box-sizing: border-box;
   margin: 0rem;
+  /* overflow-x: hidden; */
 }
 a {
   text-decoration: none;
@@ -10,15 +11,23 @@ a:hover {
   text-decoration: none;
 }
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   font-family: "Raleway";
+  scroll-behavior: smooth;
 }
 .background {
   background-color: #2a2a2a;
   height: 30rem;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
 }
 .nav1 a {
   color: white;
+}
+.nav1 {
+  width: 80%;
+  margin: auto;
 }
 .active,
 .nav a:hover {
@@ -62,7 +71,12 @@ ul {
 }
 .butt {
   background-color: #0e82f8;
+  margin-top: 0.5rem;
+  text-align: center;
   border-radius: 5px;
+  padding: 1rem;
+  padding-right: 4rem;
+  padding-left: 4rem;
 }
 /* heading */
 .hp {
@@ -73,8 +87,7 @@ ul {
   padding: 1rem;
   background-color: #208fff;
   border-radius: 5px;
-  width: 70%;
-  height: 3.5rem;
+  padding: 1rem;
   margin: 0.5rem;
   color: white;
 }
@@ -102,7 +115,7 @@ ul {
 .cd2 {
   display: flex;
   justify-content: center;
-  margin-top: 8rem;
+  margin-top: 2rem;
   flex-wrap: wrap;
 }
 .cda {
@@ -142,6 +155,9 @@ ul {
   font-size: 30px;
   text-align: center;
   padding: 5rem;
+}
+.shadow {
+  box-shadow: 0px 25px 96px rgba(0, 0, 0, 0.1);
 }
 .con {
   padding: 0.5rem;
@@ -188,11 +204,18 @@ ul {
   margin: 14px;
 }
 /* divide */
+.sc {
+  border: 1px solid grey;
+  width: 80%;
+  margin: auto;
+}
 .socials {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 80%;
 }
+
 .follow {
   width: 15rem;
   display: flex;
@@ -212,31 +235,46 @@ ul {
 .footer {
   display: flex;
   justify-content: center;
-  padding: 4rem;
+  padding: 5rem;
+  background-color: #111517;
+  flex-wrap: wrap;
+  width: 70%;
+  margin: auto;
+}
+.foot {
   background-color: #111517;
 }
 .footer-brand {
-  width: 7rem;
+  width: rem;
   display: block;
 }
 .footer ul a {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 700;
-  font-size: x-small;
   color: white;
 }
 .footer li a {
   color: grey;
   line-height: 1rem;
 }
+.footer ul {
+  width: 20%;
+  padding: 2rem;
+}
 
-@media only screen and (min-width: 670px) {
+@media only screen and (max-width: 760px) {
   .footer {
     display: flex;
     justify-content: space-around;
     background-color: #111517;
-    padding: 4rem;
-    height: 26rem;
+    padding: 2rem;
+    flex-wrap: wrap;
+    width: 70%;
+    margin: auto;
+  }
+  .footer ul {
+    width: 50%;
+    padding: 2rem;
   }
   .footer ul a {
     font-size: 20px;
@@ -246,8 +284,11 @@ ul {
     color: grey;
     line-height: 3rem;
   }
+  .prop {
+    display: block;
+    margin: auto;
+  }
 }
-
 @media only screen and (max-width: 760px) {
   .nav1 {
     display: none;
@@ -255,6 +296,18 @@ ul {
   .nav2 {
     display: block;
   }
+  .cda {
+    width: 100%;
+  }
+  .con2 {
+    width: 100%;
+  }
+  .screen {
+    display: none;
+  }
+  .cda {
+    display: grid;
+   grid-template-columns: 15% 85%
 }
 .end {
   display: flex;
