--- a/css/contact.css
+++ b/css/contact.css
@@ -23,6 +23,10 @@ ul {
   color: #0e82f8;
   border-bottom: 2px solid #0e82f8;
 }
+.nav1 {
+  width: 80%;
+  margin: auto;
+}
 .nav2 {
   display: none;
 }
@@ -54,7 +58,13 @@ ul {
 }
 .butt {
   background-color: #0e82f8;
+  margin-top: 0.5rem;
+  text-align: center;
   border-radius: 5px;
+  padding: 1rem;
+  padding-right: 4rem;
+  padding-left: 4rem;
+  color: black;
 }
 /* contact section */
 
@@ -86,20 +96,20 @@ ul {
   padding-right: 6rem;
 }
 /* form */
-input[type="text"],
-input[type="tel"],
-input[type="email"] {
-  width: 100%;
-  box-sizing: border-box;
+input {
+  width: 83%;
+  /* box-sizing: border-box; */
   border: none;
   border-bottom: 2px solid #dddddd;
-  text-align: center;
+  /* text-align: center; */
   font-size: 20px;
+  padding: 10px 3px;
 }
 select {
   border: none;
 }
 input:focus {
+  outline: none !important;
   border-bottom: 2px solid #0e82f8;
 }
 
@@ -123,6 +133,7 @@ label {
   margin-bottom: 0rem;
   padding-top: 1.5rem;
   color: #818181;
+  width: 16%;
 }
 
 form {
@@ -134,31 +145,46 @@ form {
 .footer {
   display: flex;
   justify-content: center;
-  padding: 4rem;
+  padding: 5rem;
+  background-color: #111517;
+  flex-wrap: wrap;
+  width: 70%;
+  margin: auto;
+}
+.foot {
   background-color: #111517;
 }
 .footer-brand {
-  width: 7rem;
+  width: rem;
   display: block;
 }
 .footer ul a {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 700;
-  font-size: x-small;
   color: white;
 }
 .footer li a {
   color: grey;
   line-height: 1rem;
 }
+.footer ul {
+  width: 20%;
+  padding: 2rem;
+}
 
-@media only screen and (min-width: 670px) {
+@media only screen and (max-width: 760px) {
   .footer {
     display: flex;
     justify-content: space-around;
     background-color: #111517;
-    padding: 4rem;
-    height: 26rem;
+    padding: 2rem;
+    flex-wrap: wrap;
+    width: 70%;
+    margin: auto;
+  }
+  .footer ul {
+    width: 50%;
+    padding: 2rem;
   }
   .footer ul a {
     font-size: 20px;
@@ -175,5 +201,8 @@ form {
   }
   .nav2 {
     display: block;
+  }
+  .pad {
+    /* padding: 1rem; */
   }
 }
