--- a/css/faqs.css
+++ b/css/faqs.css
@@ -23,6 +23,10 @@ ul {
   color: #0e82f8;
   border-bottom: 2px solid #0e82f8;
 }
+.nav1 {
+  width: 80%;
+  margin: auto;
+}
 .nav2 {
   display: none;
 }
@@ -54,7 +58,12 @@ ul {
 }
 .butt {
   background-color: #0e82f8;
+  margin-top: 0.5rem;
+  text-align: center;
   border-radius: 5px;
+  padding: 1rem;
+  padding-right: 4rem;
+  padding-left: 4rem;
 }
 /* contact section */
 
@@ -127,7 +136,9 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 80%;
 }
+
 .follow {
   width: 15rem;
   display: flex;
@@ -140,38 +151,55 @@ ul {
   justify-content: space-evenly;
   align-items: center;
 }
-.divider {
-  margin-top: 6rem;
+.sc {
+  border: 1px solid grey;
+  width: 80%;
+  margin: auto;
 }
 /* footer */
 .footer {
   display: flex;
   justify-content: center;
-  padding: 4rem;
+  padding: 5rem;
+  background-color: #111517;
+  flex-wrap: wrap;
+  width: 70%;
+  margin: auto;
+}
+.foot {
   background-color: #111517;
 }
 .footer-brand {
-  width: 7rem;
+  width: rem;
   display: block;
 }
 .footer ul a {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 700;
-  font-size: x-small;
   color: white;
 }
 .footer li a {
   color: grey;
   line-height: 1rem;
 }
+.footer ul {
+  width: 20%;
+  padding: 2rem;
+}
 
-@media only screen and (min-width: 670px) {
+@media only screen and (max-width: 760px) {
   .footer {
     display: flex;
     justify-content: space-around;
     background-color: #111517;
-    padding: 4rem;
-    height: 26rem;
+    padding: 2rem;
+    flex-wrap: wrap;
+    width: 70%;
+    margin: auto;
+  }
+  .footer ul {
+    width: 50%;
+    padding: 2rem;
   }
   .footer ul a {
     font-size: 20px;
